Fix card size on mobile

--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -416,8 +416,7 @@ blockquote
 
 @media screen and (max-width: 360px)
     .projects
-        width: 100%
-        width: calc(100% + 40px) !important
+        width: 100% !important
 
 @media screen and (min-width: 500px)
     .index
